semester2/object_oriented_programming/tps/.svn/pristine/7a/7ab50219530ad0f3a73b63de299e04da3ab8c7cb.svn-base
./allumettes/Joueur.java:39: error: cannot find symbol
    int getPrise(Jeu jeu) throws CoupInvalideException, EntreeInvalideException{
                                                        ^
  symbol:   class EntreeInvalideException
  location: class Joueur
./allumettes/Joueur.java:42: error: cannot find symbol
        	throw new EntreeInvalideException(val, "Vous devez donner un entier.");
        	          ^
  symbol:   class EntreeInvalideException
  location: class Joueur
./allumettes/Arbitre.java:102: error: cannot find symbol
			}catch (EntreeInvalideException e) {
			        ^
  symbol:   class EntreeInvalideException
  location: class Arbitre
3 errors
